# nyaya

./: .gitignore  README.md  dune-project  nyaya.opam
.github/workflows/: ci.yml
doc/: agentic-loop-retrospective.md  book_suggestions.md  changelog.md  issues.md  kernel-derived.md  perf-deferrals.md  soundness-risks.md
lib/: Ast.ml  check.ml  checker.ml  ctx.ml  decl.ml  driver.ml  dune  env.ml  expr.ml  fresh.ml  level.ml  lexer.ml  memo.ml  name.ml  parser.mly  reduce.ml  tc.ml  trace.ml
lib/parser/: ast.ml  dune  lexer.ml  main.ml  ndjson.ml  parser.mly  util.ml
scripts/: bench.sh
test/: dune  init_bindings.expected  init_bindings.ml  precedence.ml  stress.ml  test_main.ml
test/bad/: bogus1.ndjson  constlevels.ndjson  k-rec-conv.ndjson  large-elim-param.ndjson  level-imax-leq.ndjson  level-imax-normalization.ndjson  nat-rec-rules.ndjson  proj-of-prop.ndjson
test/bad/tutorial/: 002_badDef.ndjson  009_forallSortBad.ndjson  010_nonTypeType.ndjson  011_nonPropThm.ndjson  016_tut06_bad01.ndjson  043_inductBadNonSort.ndjson  044_inductBadNonSort2.ndjson  045_inductLevelParam.ndjson  (+34 more)
test/good/: init-prelude.ndjson  level-index-out-of-order.ndjson  sparse-name-index.ndjson
test/parser/: axiom.export  axiom.source  higher_order.export  higher_order.source  id.export  id.source  id_fvar.export  id_fvar.source  inductive.export  inductive.source  lambda.export  lambda.source  level_subst.export  level_subst.source  lexer_tests.export  lexer_tests.source  mutual.export  mutual.source  myeq.export  myeq.source  mylist.export  mylist.source  outparam_mock.export  outparam_mock.source  outparam_mock2.export  outparam_mock2.source  param_idx.export  param_idx.source  self_contained.export  self_contained.source  structure.export  structure.source  universes.export  universes.source
(+93 files in other folders)
